# Flovart

./: .AGENTS-shell.tmp  .App.polish.tmp  .App.unified.tmp  .InfiniteWorkflow.unified.tmp  .RichPromptEditor.lifecycle.tmp  .Toolbar.unified.tmp  .WorkflowAgentPanel.unified.tmp  .WorkflowNodeToolbar.unified.tmp  .WorkflowWorkspace.unified.tmp  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  .pending-shell.tmp  .richprompt-lifecycle.patch  .workflow-constants.unified.tmp  .workflow-css.unified.tmp  .workflow-store.unified.tmp  .workflow-types.unified.tmp  AGENTS.md  App.tsx  CHANGELOG.md  CLEANUP_PLAN.md  CONTEXT.md  Dockerfile  README.en.md  README.md  RouterHost.tsx  decode_garbled.cjs  docker-compose.yml  fix_results.txt  index.html  index.tsx  package-lock.json  package.json  render.yaml  styles.css  translations.ts  types.ts  (+2 more)
.playwright-mcp/: page-2026-06-30T03-35-01-466Z.yml  page-2026-06-30T03-37-51-541Z.yml  page-2026-06-30T03-45-51-260Z.yml  page-2026-06-30T03-46-00-787Z.yml  page-2026-06-30T03-52-18-797Z.yml  page-2026-06-30T03-52-51-222Z.yml  page-2026-06-30T03-52-56-135Z.yml  page-2026-06-30T04-25-32-507Z.yml  page-2026-06-30T04-26-07-094Z.yml  page-2026-06-30T06-22-47-072Z.yml  page-2026-06-30T06-22-54-809Z.yml  page-2026-06-30T06-36-48-562Z.yml  page-2026-06-30T06-37-00-594Z.yml  page-2026-06-30T06-37-36-645Z.yml  (+76 more)
agent/: codex.js  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  deeplink.rs  errors.rs  http.rs  keyring.rs  lib.rs  main.rs  state.rs
(+384 files in other folders)
